# pedestrianDetection

./: CMakeLists.txt  README.md  createNegativeCannonical.cxx  descriptorLBPH.cxx  descriptorLBPH.h  pedestrianDetector.cxx  pedestrianDetector.h  pedestrianRecognizer.cxx  pedestrianRecognizer.h  testCamara.cxx  testClient.cxx  testImage.cxx  testWindow.cxx  trainingClient.cxx
